--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <title>Matt Peachey</title>
+    <title>Matt Peachey | PhD Student &amp; Researcher</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
