Add minimal favicon to repo

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="The personal web-app for Matt Peachey" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
     <!-- Add the Ubuntu GOOGLE FONT HERE-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
