Update web title.

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       rel="stylesheet"
     />
 
-    <title>Matt Peachey | PhD Student &amp; Researcher</title>
+    <title>Matt Peachey | PhD Student</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
